# OpenGL

./: .gitmodules  CMakeLists.txt  CMakePresets.json  readme.md
res/: basic.shader
res/shaders/: basic.shader
src/: application.cpp  application.hpp  assetManager.cpp  assetManager.hpp  basicCube.hpp  camera.cpp  camera.hpp  events.cpp  events.hpp  game.cpp  game.hpp  main.cpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  utils.hpp
src/renderer/: mesh.cpp  mesh.hpp  model.cpp  model.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp
